# InventoryManagementSystem

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  error_handlers.py  router.py
backend/app/api/routes/: auth.py  customers.py  dashboard.py  health.py  orders.py  products.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  customer.py  order.py  product.py  user.py
backend/app/repositories/: __init__.py  base.py  customer.py  order.py  product.py  user.py
backend/app/routers/: customers.py  dashboard.py  orders.py  products.py
backend/app/schemas/: __init__.py  auth.py  customer.py  dashboard.py  order.py  product.py
backend/app/services/: __init__.py  auth_service.py  customer_service.py  dashboard_service.py  order_service.py  product_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_users.py
backend/tests/: conftest.py  test_auth.py  test_customers.py  test_orders.py  test_products.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  routes.jsx
frontend/src/api/: client.js
frontend/src/components/: ConfirmDialog.jsx  Toast.jsx
(+43 files in other folders)
