[project]
name = "inventory-backend"
version = "1.0.0"
description = "Inventory & Order Management System — FastAPI backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
